test/testdata/e2e/kafka_broker_filter/cluster.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Cluster
metadata:
  name: localkafka
spec:
  name: localkafka
  connect_timeout: 0.25s
  type: STRICT_DNS
  lb_policy: ROUND_ROBIN
  load_assignment:
    cluster_name: localkafka
    endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: kafka-broker
                  port_value: 9092
