test/testdata/e2e/kafka_broker_filter/virtual-service.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: kafka-broker-proxy
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: kafka-broker-listener
